--- a/index.html
+++ b/index.html
@@ -1,62 +1,301 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ZodTV - Player</title>
-  <meta name="description" content="ZodTV - Player" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>ZodTV - Player</title>
+    <meta name="description" content="ZodTV - Player" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
 
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <style>
+      html {
+        height: 100%;
+      }
 
-  <style>
-    html {
-      height: 100%;
-    }
+      *,
+      *::before,
+      *::after {
+        box-sizing: inherit;
+        margin: 0;
+        padding: 0;
+      }
 
-    *, *::before, *::after {
-      box-sizing: inherit;
-      margin: 0;
-      padding: 0;
-    }
+      body {
+        height: 100%;
+      }
 
-    body {
-      height: 100%;
-    }
+      .container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
-    .container {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+      .video-container {
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
 
-    .video-container {
-      width: 100%;
-      height: 100%;
-      margin: 0 auto;
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
+      video {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="video-container" id="video-container">
+        <video
+          controls
+          class="video"
+          id="video"
+          preload="metadata"
+          autoplay="true"
+          playsinline="true"
+          muted="true"
+        ></video>
+        <div class="video-controls hidden" id="video-controls">
+          <div class="video-progress">
+            <progress id="progress-bar" value="0" min="0"></progress>
+            <input
+              class="seek"
+              id="seek"
+              value="0"
+              min="0"
+              type="range"
+              step="1"
+            />
+            <div class="seek-tooltip" id="seek-tooltip">00:00</div>
+          </div>
 
-    video {
-      width: 100%;
-      height: 100%;
-    }
-  </style>
-</head>
-<body>
+          <div class="bottom-controls">
+            <div class="left-controls">
+              <button data-title="Play (k)" id="play">
+                <svg class="playback-icons">
+                  <use href="#play-icon"></use>
+                  <use class="hidden" href="#pause"></use>
+                </svg>
+              </button>
 
-  <div class="container">
-    <div class="video-container" id="video-container">
-      <video controls class="video" id="video" preload="metadata" autoplay=true playsInLine=true muted=true></video>
+              <div class="volume-controls">
+                <button
+                  data-title="Mute (m)"
+                  class="volume-button"
+                  id="volume-button"
+                >
+                  <svg>
+                    <use class="hidden" href="#volume-mute"></use>
+                    <use class="hidden" href="#volume-low"></use>
+                    <use href="#volume-high"></use>
+                  </svg>
+                </button>
+
+                <input
+                  class="volume"
+                  id="volume"
+                  value="1"
+                  data-mute="0.5"
+                  type="range"
+                  max="1"
+                  min="0"
+                  step="0.01"
+                />
+              </div>
+
+              <div class="time">
+                <time id="time-elapsed">00:00</time>
+                <span> / </span>
+                <time id="duration">00:00</time>
+              </div>
+            </div>
+
+            <div class="right-controls">
+              <button data-title="PIP (p)" class="pip-button" id="pip-button">
+                <svg>
+                  <use href="#pip"></use>
+                </svg>
+              </button>
+              <button data-title="Setting" class="setting-btn" id="setting-btn">
+                <img src="setting.svg" alt="" />
+              </button>
+
+              <button
+                data-title="Full screen (f)"
+                class="fullscreen-button"
+                id="fullscreen-button"
+              >
+                <svg>
+                  <use href="#fullscreen"></use>
+                  <use href="#fullscreen-exit" class="hidden"></use>
+                </svg>
+              </button>
+            </div>
+            <div class="setting-box" id="setting-box" style="display: none">
+              <div class="setting-item" id="qualityItem">
+                <p>Quality</p>
+                <div>
+                  <p>720p</p>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                    <path
+                      d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z"
+                    />
+                  </svg>
+                </div>
+              </div>
+              <div class="setting-item" id="speedItem">
+                <p>Speed</p>
+                <div>
+                  <p>1x</p>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                    <path
+                      d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z"
+                    />
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <div class="quality-box" id="quality-box" style="display: none">
+              <div class="quality-heading" id="qualityHeading">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                  <path
+                    d="M224 480c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l169.4 169.4c12.5 12.5 12.5 32.75 0 45.25C240.4 476.9 232.2 480 224 480z"
+                  />
+                </svg>
+                <p>Video Quality</p>
+              </div>
+              <hr />
+              <div class="quality-item">
+                <div>
+                  <input type="radio" name="quality" id="auto" />
+                  <label for="auto">Auto</label>
+                </div>
+                <div>
+                  <input type="radio" name="quality" id="1080p60" />
+                  <label for="1080p60">1080p60</label>
+                </div>
+                <div>
+                  <input type="radio" name="quality" id="720p" />
+                  <label for="720p">720p</label>
+                </div>
+                <div>
+                  <input type="radio" name="quality" id="480p" />
+                  <label for="480p">480p</label>
+                </div>
+                <div>
+                  <input type="radio" name="quality" id="360p" />
+                  <label for="360p">360p</label>
+                </div>
+                <div>
+                  <input type="radio" name="quality" id="160p" />
+                  <label for="160p">160p</label>
+                </div>
+              </div>
+            </div>
+            <div class="speed-box" id="speed-box" style="display: none">
+              <div class="speed-heading" id="speedHeading">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                  <path
+                    d="M224 480c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l169.4 169.4c12.5 12.5 12.5 32.75 0 45.25C240.4 476.9 232.2 480 224 480z"
+                  />
+                </svg>
+                <p>Speed</p>
+              </div>
+              <hr />
+              <div class="speed-item">
+                <div>
+                  <input type="radio" name="speed" id="vlow" />
+                  <label for="vlow">0.25x</label>
+                </div>
+                <div>
+                  <input type="radio" name="speed" id="low" />
+                  <label for="low">0.5x</label>
+                </div>
+                <div>
+                  <input type="radio" name="speed" id="medium" />
+                  <label for="medium">0.75x</label>
+                </div>
+                <div>
+                  <input type="radio" name="speed" id="normal" />
+                  <label for="normal">1x (Normal)</label>
+                </div>
+                <div>
+                  <input type="radio" name="speed" id="high" />
+                  <label for="high">1.25x</label>
+                </div>
+                <div>
+                  <input type="radio" name="speed" id="mhigh" />
+                  <label for="mhigh">1.5x</label>
+                </div>
+                <div>
+                  <input type="radio" name="speed" id="vhigh" />
+                  <label for="vhigh">2x</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <script src="vidplayer.js"></script>
-</body>
+    <svg style="display: none">
+      <defs>
+        <symbol id="pause" viewBox="0 0 24 24">
+          <path
+            d="M14.016 5.016h3.984v13.969h-3.984v-13.969zM6 18.984v-13.969h3.984v13.969h-3.984z"
+          ></path>
+        </symbol>
+
+        <symbol id="play-icon" viewBox="0 0 24 24">
+          <path d="M8.016 5.016l10.969 6.984-10.969 6.984v-13.969z"></path>
+        </symbol>
+
+        <symbol id="volume-high" viewBox="0 0 24 24">
+          <path
+            d="M14.016 3.234q3.047 0.656 5.016 3.117t1.969 5.648-1.969 5.648-5.016 3.117v-2.063q2.203-0.656 3.586-2.484t1.383-4.219-1.383-4.219-3.586-2.484v-2.063zM16.5 12q0 2.813-2.484 4.031v-8.063q1.031 0.516 1.758 1.688t0.727 2.344zM3 9h3.984l5.016-5.016v16.031l-5.016-5.016h-3.984v-6z"
+          ></path>
+        </symbol>
+
+        <symbol id="volume-low" viewBox="0 0 24 24">
+          <path
+            d="M5.016 9h3.984l5.016-5.016v16.031l-5.016-5.016h-3.984v-6zM18.516 12q0 2.766-2.531 4.031v-8.063q1.031 0.516 1.781 1.711t0.75 2.32z"
+          ></path>
+        </symbol>
+
+        <symbol id="volume-mute" viewBox="0 0 24 24">
+          <path
+            d="M12 3.984v4.219l-2.109-2.109zM4.266 3l16.734 16.734-1.266 1.266-2.063-2.063q-1.547 1.313-3.656 1.828v-2.063q1.172-0.328 2.25-1.172l-4.266-4.266v6.75l-5.016-5.016h-3.984v-6h4.734l-4.734-4.734zM18.984 12q0-2.391-1.383-4.219t-3.586-2.484v-2.063q3.047 0.656 5.016 3.117t1.969 5.648q0 2.203-1.031 4.172l-1.5-1.547q0.516-1.266 0.516-2.625zM16.5 12q0 0.422-0.047 0.609l-2.438-2.438v-2.203q1.031 0.516 1.758 1.688t0.727 2.344z"
+          ></path>
+        </symbol>
+
+        <symbol id="fullscreen" viewBox="0 0 24 24">
+          <path
+            d="M14.016 5.016h4.969v4.969h-1.969v-3h-3v-1.969zM17.016 17.016v-3h1.969v4.969h-4.969v-1.969h3zM5.016 9.984v-4.969h4.969v1.969h-3v3h-1.969zM6.984 14.016v3h3v1.969h-4.969v-4.969h1.969z"
+          ></path>
+        </symbol>
+
+        <symbol id="fullscreen-exit" viewBox="0 0 24 24">
+          <path
+            d="M15.984 8.016h3v1.969h-4.969v-4.969h1.969v3zM14.016 18.984v-4.969h4.969v1.969h-3v3h-1.969zM8.016 8.016v-3h1.969v4.969h-4.969v-1.969h3zM5.016 15.984v-1.969h4.969v4.969h-1.969v-3h-3z"
+          ></path>
+        </symbol>
+
+        <symbol id="pip" viewBox="0 0 24 24">
+          <path
+            d="M21 19.031v-14.063h-18v14.063h18zM23.016 18.984q0 0.797-0.609 1.406t-1.406 0.609h-18q-0.797 0-1.406-0.609t-0.609-1.406v-14.016q0-0.797 0.609-1.383t1.406-0.586h18q0.797 0 1.406 0.586t0.609 1.383v14.016zM18.984 11.016v6h-7.969v-6h7.969z"
+          ></path>
+        </symbol>
+      </defs>
+    </svg>
+
+    <script src="vidplayer.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
-
